--- a/BmesAspNetCoreRestApi/appsettings.json
+++ b/BmesAspNetCoreRestApi/appsettings.json
@@ -6,5 +6,17 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Data": {
+    "BmesApi": {
+      "ConnectionString": "Data Source=bmesrestapi.db"
+    },
+    "BmesIdentity": {
+      "ConnectionString": "Data Source=bmesidentity.db"
+    }
+  },
+  "AuthSettings": {
+    "Key": "Hello my dear brothers and sisters",
+    "ExpirationInMinutes": "10080"
+  }
 }
