--- a/BmesAspNetCoreRestApi/appsettings.json
+++ b/BmesAspNetCoreRestApi/appsettings.json
@@ -9,10 +9,10 @@
   "AllowedHosts": "*",
   "Data": {
     "BmesApi": {
-      "ConnectionString": "Server=tcp:bmes-sql-server.database.windows.net,1433;Initial Catalog=Bmesaspnetapi;Persist Security Info=False;User ID=udemybmes;Password=Arhanghel147!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+      "ConnectionString": "Data Source=bmesrestapi.db"
     },
     "BmesIdentity": {
-      "ConnectionString": "Server=tcp:bmes-sql-server.database.windows.net,1433;Initial Catalog=BmesaspnetapiIdentity;Persist Security Info=False;User ID=udemybmes;Password=Arhanghel147!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+      "ConnectionString": "Data Source=bmesidentity.db"
     }
   },
   "AuthSettings": {
